Closed
Bug 29027
Opened 26 years ago
Closed 26 years ago
Minimized not restored when called from Taskbar or Tasks menu.
Categories
(SeaMonkey :: MailNews: Message Display, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: laurel, Assigned: bryner)
References
Details
(Whiteboard: [nsbeta2+][6/15])
Using 2000-02-23-08 commercial build NT 4.0
Using 2000-02-23-08 commercial build linux rh6.0
When mail window is minimized, selecting Tasks|Mail from Browser window or using
the mail icon on the task bar from browser will not restore the mail window.
The reverse is also true for calling up the browser window from the mail window.
1. You have one browser window open and one mail window open.
2. Minimize the mail window.
3. From the broswer window select Tasks|Mail.
Result: Nothing happens. Mail window is not restored, it stays in minimized
state.
4. From browser window, click the mail/envelope icon on the task bar.
Result: Nothing happens. Mail window is not restored, it stays in minimized
state.
Expected result: mail window should restore and come to foreground.
Comment 1•26 years ago
|
||
I see the same behavior for other windows which are accessible from the Tasks
menu. So either the Tasks menu Javascript is wrong, or else the windowing
implementation is wrong. Starting with hangas.
Assignee: phil → hangas
After talking to danm, he felt he should have this bug.
Assignee: hangas → danm
Comment 3•26 years ago
|
||
Mass-moving all M16 non-feature bugs to M17, which we now consider to be part
of beta2.
Target Milestone: M16 → M17
Comment 7•26 years ago
|
||
freshness dating has expired, nominating for nsbeta3, moving to m21
Target Milestone: M19 → M21
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 9•26 years ago
|
||
blizzard is working on a Linux fix for this. A separate fix will be required
for Windows, which I'm trying to figure out.
Comment 10•26 years ago
|
||
Patch for Linux:
Index: nsWindow.cpp
===================================================================
RCS file: /cvsroot/mozilla/widget/src/gtk/nsWindow.cpp,v
retrieving revision 1.274
diff -u -r1.274 nsWindow.cpp
--- nsWindow.cpp 2000/06/07 00:11:46 1.274
+++ nsWindow.cpp 2000/06/08 20:22:03
@@ -912,7 +912,10 @@
if (top_mozarea)
{
if (!GTK_WIDGET_HAS_FOCUS(top_mozarea))
+ {
gtk_widget_grab_focus(top_mozarea);
+ GetAttention();
+ }
}
// check to see if we need to send a focus out event for the old window
Comment 11•26 years ago
|
||
If r=pavlov, a=brendan.
/be
Comment 12•26 years ago
|
||
Fix checked in on Linux.
Comment 13•26 years ago
|
||
Updating from [6/1] to [6/15]
Whiteboard: [nsbeta2+] 6/1 → [nsbeta2+][6/15]
| Assignee | ||
Comment 14•26 years ago
|
||
Fix is now checked in on Windows. I'm going to find out what happens on Mac
before closing this bug.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 15•26 years ago
|
||
Per saari, we should not unshade a shaded window on Mac, so this is fine.
| Reporter | ||
Comment 16•26 years ago
|
||
OK using:
2000-06-13-08 m17 commercial build linux rh6.0
2000-06-13-20 m17 commercial build NT 4.0
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•