fix bug #29027.  When calling nsIWidget::SetFocus on a widget, bring it's toplevel window to the top of the stacking order and unminimize it if necessary.  r=pavlov, a=brendan